# websh

./: .gitignore  Cargo.toml  README.md
assets/crypto/: attestations.json
content/: manifest.json  now.meta.json  now.toml
content/.websh/: ledger.json
content/papers/: _index.dir.json
content/projects/: _index.dir.json
content/talks/: _index.dir.json  evaluating-compiler-optimization-impacts-on-zkvm-performance.meta.json
content/writing/: _index.dir.json  zk-proofs-from-a-compiler-perspective-ko.md  zk-proofs-from-a-compiler-perspective-ko.meta.json  zk-proofs-from-a-compiler-perspective.md  zk-proofs-from-a-compiler-perspective.meta.json
content/writing/zk-proofs-from-a-compiler-perspective/: _index.dir.json  en.md  en.meta.json  ko.md  ko.meta.json
content/writing/zksummit14-review/: _index.dir.json  en.md  en.meta.json  ko.md  ko.meta.json
crates/websh-cli/: Cargo.toml
crates/websh-cli/src/: lib.rs
crates/websh-cli/src/commands/crypto/: ack.rs  pgp.rs
crates/websh-cli/src/commands/deploy/: dotenv.rs  pinata.rs
crates/websh-cli/src/commands/mempool/: add.rs  drop.rs
crates/websh-cli/src/infra/: gh.rs  git.rs  json.rs  process.rs
crates/websh-cli/src/workflows/attest/: build.rs  discover.rs  gpg.rs  sign.rs  verify.rs
crates/websh-cli/src/workflows/attest/subject/: build.rs  imports.rs  mod.rs  types.rs
crates/websh-cli/src/workflows/content/: files.rs  frontmatter.rs  ledger.rs  manifest.rs  media.rs  mod.rs  sidecar.rs
crates/websh-cli/src/workflows/mempool/: list.rs  mount.rs  path.rs  promote.rs  remote.rs
crates/websh-cli/src/workflows/mount/: init.rs  remote.rs
crates/websh-cli/tests/: cli_crypto.rs
crates/websh-core/src/: lib.rs
crates/websh-core/src/domain/: bundle.rs  changes.rs  filesystem.rs  manifest.rs  mempool.rs  metadata.rs  mod.rs  site.rs
crates/websh-core/src/engine/attestation/: artifact.rs  subject.rs
crates/websh-core/src/engine/filesystem/: content.rs  intent.rs  mod.rs  routing.rs  snapshot.rs  tree.rs
crates/websh-core/src/engine/mempool/: form.rs  manifest_entry.rs  mod.rs  parse.rs  path.rs
crates/websh-core/src/engine/runtime/: boot.rs  mod.rs
crates/websh-core/src/ports/: manifest.rs  mock.rs  mod.rs  storage.rs
crates/websh-core/src/support/: locale.rs  mod.rs
crates/websh-site/: Cargo.toml
crates/websh-site/src/: artifacts.rs
crates/websh-web/src/: config.rs
crates/websh-web/src/app/: context.rs  error.rs  mod.rs  services.rs
crates/websh-web/src/features/: router.rs
crates/websh-web/src/features/chrome/: mod.rs  site_chrome.module.css
crates/websh-web/src/features/home/: mod.rs  model.rs  sections.rs
crates/websh-web/src/features/ledger/: ledger_page.module.css  mod.rs  model.rs
crates/websh-web/src/features/mempool/: commit.rs  error.rs  mod.rs  model.rs
crates/websh-web/src/features/reader/: actions.rs  document.rs  error.rs  intent.rs  meta.rs  mod.rs  preferences.rs  reader.module.css  shell.rs  title_block.rs
crates/websh-web/src/features/terminal/: boot.rs
crates/websh-web/src/platform/: asset.rs  dom.rs  js.rs  mod.rs
crates/websh-web/src/render/: markdown.rs
crates/websh-web/src/runtime/: error.rs  idb.rs  loader.rs  mod.rs  mounts.rs  state.rs  wallet.rs
crates/websh-web/src/runtime/github_backend/: client.rs  graphql.rs  mod.rs  path.rs
crates/websh-web/src/shared/components/: breadcrumb.rs  file_meta.rs
docs/architecture/: content-bundles.md  crates.md  current.md
tests/e2e/: websh.spec.js
(+13 files in other folders)
