[package]
name = "websh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "websh-cli"
path = "src/main.rs"

[dependencies]
websh-core = { workspace = true, features = ["eth-verify"] }
websh-site = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
pgp = { workspace = true }
getrandom = { workspace = true }
serde_norway = { workspace = true }
lopdf = { workspace = true }
imagesize = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
websh-core = { workspace = true, features = ["mock", "eth-verify"] }
k256 = { workspace = true }
alloy-primitives = { workspace = true }
rand08 = { workspace = true }
