[package]
name = "websh-site"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
websh-core = { workspace = true, features = ["eth-verify"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pgp = { workspace = true }
